--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Croissants</title>
+    <title>Croissants</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,17 +15,11 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap"
-      rel="stylesheet"
-    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg background sticky-top">
+    <nav class="navbar navbar-expand-sm background sticky-top">
       <div class="container">
         <a class="navbar-brand">
           <img src="images/croissant-coffee.png" class="logo"
@@ -44,11 +38,25 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link active" href="about.html">Photo Gallery</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="photo.html">Photo Gallery</a>
+            <a class="nav-link active" href="contact.html">Contact</a>
           </div>
         </div>
       </div>
     </nav>
+    <footer>
+      <div class="signature">
+        Designed and coded by
+        <a
+          href="https://github.com/raalizz/Croissants-project"
+          title="portfolio's repository"
+          target="_blank"
+          style="color: #000"
+          class="text-decoration-none"
+        >
+          RAA</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
