--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap"
-      rel="stylesheet"
-    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg background sticky-top">
+    <nav class="navbar navbar-expand-sm background sticky-top">
       <div class="container">
         <a class="navbar-brand">
           <img src="images/croissant-coffee.png" class="logo"
@@ -46,8 +40,8 @@
             <a class="nav-link active" aria-current="page" href="index.html"
               >Home</a
             >
-            <a class="nav-link" href="about.html">Photo Gallery</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="photo.html">Photo Gallery</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </div>
         </div>
       </div>
@@ -57,28 +51,62 @@
       src="images/croissants.gif"
       class="img-fluid d-block rounded mx-auto gif"
     />
+    <br />
+    <br />
     <hr />
-    <h2 class="text-center p-5">Interesting Facts about Croissants</h2>
-    <div class="background d-flex ustify-content-between">
-      <p>
-        A croissant is a buttery, flaky, viennoiserie pastry inspired by the
-        shape of the Austrian kipferl but using the French yeast-leavened
-        laminated dough.Croissants are named for their historical crescent
-        shape. <br />
-        dough is layered with butter, rolled and folded several times in
-        succession, then rolled into a thin sheet, in a technique called
-        laminating. The process results in a layered, flaky texture, similar to
-        a puff pastry.
-      </p>
-      <p>
-        Crescent-shaped breads have been made since the Renaissance, and
-        crescent-shaped cakes possibly since antiquity. Kipferls have long been
-        a staple of Austrian cuisine, and are often found in French bakeries and
-        pâtisseries. <br />
-        The modern croissant was developed in the early 20th century when French
-        bakers replaced the brioche dough of the kipferl with a yeast-leavened
-        laminated dough.
-      </p>
+    <h2 class="text-center p-4 text-decoration-underline">
+      Interesting Facts about Croissants
+    </h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <p class="text">
+            A <strong>croissant</strong> is a buttery, flaky, viennoiserie
+            pastry inspired by the shape of the Austrian kipferl but using the
+            French yeast-leavened laminated dough.
+            <strong>Croissants</strong> are named for their historical crescent
+            shape. dough is layered with butter, rolled and folded several times
+            in succession, then rolled into a thin sheet, in a technique called
+            laminating. The process results in a layered, flaky texture, similar
+            to a puff pastry.
+          </p>
+        </div>
+
+        <div class="col-sm-6">
+          <p class="text">
+            Crescent-shaped breads have been made since the Renaissance, and
+            crescent-shaped cakes possibly since antiquity. Kipferls have long
+            been a staple of Austrian cuisine, and are often found in French
+            bakeries and pâtisseries. The modern <strong>croissant</strong> was
+            developed in the early 20th century when French bakers replaced the
+            brioche dough of the kipferl with a yeast-leavened laminated dough.
+          </p>
+        </div>
+      </div>
     </div>
+    <hr />
+    <h3 class="text-center text-decoration-underline">Recipe</h3>
+    <iframe
+      width="500"
+      height="315"
+      src="https://www.youtube.com/embed/djnNkLi_K6E"
+      class="video"
+    >
+    </iframe>
+    <hr />
+    <footer>
+      <div class="signature">
+        Designed and coded by
+        <a
+          href="https://github.com/raalizz/Croissants-project"
+          title="portfolio's repository"
+          target="_blank"
+          style="color: #000"
+          class="text-decoration-none"
+        >
+          RAA</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
