I made some changes in the index.html and added some styles to it and also added the content for the contact.html

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,10 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/6eae258bbb.js"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -44,19 +48,10 @@
         </div>
       </div>
     </nav>
-    <footer>
-      <div class="signature">
-        Designed and coded by
-        <a
-          href="https://github.com/raalizz/Croissants-project"
-          title="portfolio's repository"
-          target="_blank"
-          style="color: #000"
-          class="text-decoration-none"
-        >
-          RAA</a
-        >
-      </div>
-    </footer>
+    <h1 class="header">contact us for more recipes</h1>
+    <div class="contact-info d-flex justify-content-center">
+      <i class="fa-solid fa-envelope icon"></i>
+      <h4 class="email pt-3">croissants_recipes@me.com</h4>
+    </div>
   </body>
 </html>
