--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
       </div>
     </nav>
     <h1>Croissants</h1>
-    <img
-      src="images/croissants.gif"
-      class="img-fluid d-block rounded mx-auto gif"
-    />
+    <img src="images/croissants.gif" class="img-fluid rounded gif" />
     <br />
     <br />
     <hr />
@@ -90,13 +87,13 @@
       width="500"
       height="315"
       src="https://www.youtube.com/embed/djnNkLi_K6E"
-      class="video"
+      class="video rounded"
     >
     </iframe>
     <hr />
     <footer>
       <div class="signature">
-        Designed and coded by
+        open-source code by
         <a
           href="https://github.com/raalizz/Croissants-project"
           title="portfolio's repository"
