I added alternative texts to the images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <nav class="navbar navbar-expand-sm background sticky-top">
       <div class="container">
         <a class="navbar-brand">
-          <img src="images/croissant-coffee.png" class="logo"
+          <img
+            src="images/croissant-coffee.png"
+            class="logo"
+            alt="croissant coffee logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -47,7 +50,11 @@
       </div>
     </nav>
     <h1>Croissants</h1>
-    <img src="images/croissants.gif" class="img-fluid rounded gif" />
+    <img
+      src="images/croissants.gif"
+      class="img-fluid rounded gif"
+      alt="croissant gif"
+    />
     <br />
     <br />
     <hr />
