--- a/photo.html
+++ b/photo.html
@@ -49,16 +49,32 @@
       <nav class="nav-container">
         <ul class="nav-lists">
           <li class="nav-list" style="--i: 0">
-            <img src="images/croissants-pic-1.jpeg" class="img-fluid" />
+            <img
+              src="images/croissants-pic-1.jpeg"
+              class="img-fluid"
+              alt="a wooden platter of coissants, jam and butter"
+            />
           </li>
           <li class="nav-list" style="--i: 1">
-            <img src="images/croissant-pic-2.jpeg" class="img-fluid" />
+            <img
+              src="images/croissant-pic-2.jpeg"
+              class="img-fluid"
+              alt="a close-up picture of croissants"
+            />
           </li>
           <li class="nav-list" style="--i: 2">
-            <img src="images/croissant-pic-3.jpeg" class="img-fluid" />
+            <img
+              src="images/croissant-pic-3.jpeg"
+              class="img-fluid"
+              alt="two croissants with butter and knife"
+            />
           </li>
           <li class="nav-list" style="--i: 3">
-            <img src="images/croissant-pic-5.jpeg" class="img-fluid" />
+            <img
+              src="images/croissant-pic-5.jpeg"
+              class="img-fluid"
+              alt="different types of french pastries"
+            />
           </li>
         </ul>
       </nav>
