I made the index page more SEO friendly

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0 "
       content="This is a website about croissants"
     />
-    <title>Croissants</title>
+    <title>Croissants, a delicious French pastry</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,6 +30,7 @@
             src="images/croissant-coffee.png"
             class="logo"
             alt="croissant coffee logo"
+            title="logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -57,7 +58,8 @@
     <img
       src="images/croissants.gif"
       class="img-fluid rounded gif"
-      alt="croissant gif"
+      alt="croissant with dripping chocolate gif"
+      title="croissant gif"
     />
     <br />
     <br />
