I made the contact page and the photo page more SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
       content="This is the website's contact information"
     />
-    <title>Croissants</title>
+    <title>Croissants Contact Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,7 +30,11 @@
     <nav class="navbar navbar-expand-sm background sticky-top">
       <div class="container">
         <a class="navbar-brand">
-          <img src="images/croissant-coffee.png" class="logo"
+          <img
+            src="images/croissant-coffee.png"
+            class="logo"
+            alt="croissant coffee logo"
+            title="logo"
         /></a>
         <button
           class="navbar-toggler"
