I added a link to the index page to the logo on all pages

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     <nav class="navbar navbar-expand-sm background sticky-top">
       <div class="container">
         <a class="navbar-brand">
-          <img
-            src="images/croissant-coffee.png"
-            class="logo"
-            alt="croissant coffee logo"
-            title="logo"
-        /></a>
+          <a href="index.html"
+            ><img
+              src="images/croissant-coffee.png"
+              class="logo"
+              alt="croissant coffee logo"
+              title="logo" /></a
+        ></a>
         <button
           class="navbar-toggler"
           type="button"
