I added rel="noreferrer" to the Github link

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           href="https://github.com/raalizz/Croissants-project"
           title="portfolio's repository"
           target="_blank"
+          rel="noreferrer"
           style="color: #000"
           class="text-decoration-none"
         >
