I added poppins google font to all pages, added a header to the index page and added a main tag with sections

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;700&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -55,56 +59,55 @@
         </div>
       </div>
     </nav>
-    <h1>Croissants</h1>
-    <img
-      src="images/croissants.gif"
-      class="img-fluid rounded gif"
-      alt="croissant with dripping chocolate gif"
-      title="croissant gif"
-    />
-    <br />
-    <br />
-    <hr />
-    <h2 class="text-center p-4 text-decoration-underline">
-      Interesting Facts about Croissants
-    </h2>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <p class="text">
-            A <strong>croissant</strong> is a buttery, flaky, viennoiserie
-            pastry inspired by the shape of the Austrian kipferl but using the
-            French yeast-leavened laminated dough.
-            <strong>Croissants</strong> are named for their historical crescent
-            shape. dough is layered with butter, rolled and folded several times
-            in succession, then rolled into a thin sheet, in a technique called
-            laminating. The process results in a layered, flaky texture, similar
-            to a puff pastry.
-          </p>
-        </div>
+    <header>
+      <br />
+      <h2>.Dessert.</h2>
+      <h1>Croissants</h1>
+      <h3>Where butter and flakiness unite in pastry perfection</h3>
+    </header>
+    <main>
+      <section class="facts">
+        <h2>Interesting Facts about Croissants</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <p class="text">
+                A <strong>croissant</strong> is a buttery, flaky, viennoiserie
+                pastry inspired by the shape of the Austrian kipferl but using
+                the French yeast-leavened laminated dough.
+                <strong>Croissants</strong> are named for their historical
+                crescent shape. dough is layered with butter, rolled and folded
+                several times in succession, then rolled into a thin sheet, in a
+                technique called laminating. The process results in a layered,
+                flaky texture, similar to a puff pastry.
+              </p>
+            </div>
 
-        <div class="col-sm-6">
-          <p class="text">
-            Crescent-shaped breads have been made since the Renaissance, and
-            crescent-shaped cakes possibly since antiquity. Kipferls have long
-            been a staple of Austrian cuisine, and are often found in French
-            bakeries and pâtisseries. The modern <strong>croissant</strong> was
-            developed in the early 20th century when French bakers replaced the
-            brioche dough of the kipferl with a yeast-leavened laminated dough.
-          </p>
+            <div class="col-sm-6">
+              <p class="text">
+                Crescent-shaped breads have been made since the Renaissance, and
+                crescent-shaped cakes possibly since antiquity. Kipferls have
+                long been a staple of Austrian cuisine, and are often found in
+                French bakeries and pâtisseries. The modern
+                <strong>croissant</strong> was developed in the early 20th
+                century when French bakers replaced the brioche dough of the
+                kipferl with a yeast-leavened laminated dough.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <hr />
-    <h3 class="text-center text-decoration-underline">Recipe</h3>
-    <iframe
-      width="500"
-      height="315"
-      src="https://www.youtube.com/embed/djnNkLi_K6E"
-      class="video rounded"
-    >
-    </iframe>
-    <hr />
+      </section>
+      <section class="recipe">
+        <h3 class="text-center text-decoration-underline">Recipe</h3>
+        <iframe
+          width="500"
+          height="315"
+          src="https://www.youtube.com/embed/djnNkLi_K6E"
+          class="video rounded"
+        >
+        </iframe>
+      </section>
+    </main>
     <footer>
       <div class="signature">
         open-source code by
