--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,10 @@
       src="https://kit.fontawesome.com/6eae258bbb.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;700&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
