I added a footer with info and links and an image and styled them. Also, I added fontAwseome icons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/6eae258bbb.js"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -98,7 +102,7 @@
         </div>
       </section>
       <section class="recipe">
-        <h3 class="text-center text-decoration-underline">Recipe</h3>
+        <h3>Recipe</h3>
         <iframe
           width="500"
           height="315"
@@ -109,19 +113,111 @@
       </section>
     </main>
     <footer>
-      <div class="signature">
-        open-source code by
-        <a
-          href="https://github.com/raalizz/Croissants-project"
-          title="portfolio's repository"
-          target="_blank"
-          rel="noreferrer"
-          style="color: #000"
-          class="text-decoration-none"
-        >
-          RAA</a
-        >
-      </div>
+      <section class="grid">
+        <div>
+          <h4>More About Croissants</h4>
+          <ul>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Croissant"
+                target="_blank"
+                rel="noreferrer"
+                class="links"
+                >wikipedia</a
+              >
+            </li>
+            <br />
+            <li>
+              <a
+                href="https://sallysbakingaddiction.com/homemade-croissants/"
+                target="_blank"
+                rel="noreferrer"
+                class="links"
+                >Sally's Baking Recipes
+              </a>
+            </li>
+            <br />
+            <li>
+              <a
+                href="https://devourtours.com/blog/best-croissants-in-paris/?cnt=DE"
+                target="_blank"
+                rel="noreferrer"
+                class="links"
+                >Discover the Best Croissants in Paris</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h4>About This Site</h4>
+          <p>
+            The site was developed using a combination of HTML, CSS, and
+            bootstrap. It was created as part of a lesson challenge for SheCodes
+            to develop my coding skills.
+          </p>
+
+          <p>
+            View the
+            <a
+              href="https://github.com/raalizz/Croissants-project"
+              target="_blank"
+              rel="noreferrer"
+              class="links"
+              >Source Code</a
+            >
+          </p>
+        </div>
+        <div>
+          <h4>About The Developer</h4>
+          <p>
+            Hi! My name is Raghda and I designed this webpage as a way to
+            enhance my expertise in crafting responsive landing pages featuring
+            more intricate layouts.
+          </p>
+          <br />
+          <div>
+            <a
+              href="https://github.com/raalizz"
+              title="Github"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <i class="fa-brands fa-github icons" style="color: #64462e"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/raghdaalizz"
+              title="Linkedin"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <i class="fa-brands fa-linkedin icons" style="color: #64462e">
+              </i>
+            </a>
+            <a href="mailto:raalizz.h@gmail.com" title="Email">
+              <i class="fa-solid fa-envelope icons" style="color: #64462e"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/raghda.alizz"
+              title="Instagram"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <i
+                class="fa-brands fa-instagram icons"
+                style="color: #64462e"
+              ></i>
+            </a>
+            <a
+              href="https://raghda-alizz-alshaikhli.netlify.app/"
+              target="_blank"
+              rel="noreferrer"
+              title="My Portfolio"
+            >
+              <i class="fa-regular fa-user icons" style="color: #64462e"></i
+            ></a>
+          </div>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
