I added a main and a section to the contact page and changed the name of the class. Also made the website more responsive on smaller screens

--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,14 @@
         </div>
       </div>
     </nav>
-    <h1 class="header">contact us for more recipes</h1>
-    <div class="contact-info d-flex justify-content-center">
-      <i class="fa-solid fa-envelope icon"></i>
-      <h4 class="email pt-3">croissants_recipes@me.com</h4>
-    </div>
+    <main>
+      <section class="contact">
+        <h1>contact us for more recipes</h1>
+        <div class="contact-info d-flex justify-content-center">
+          <i class="fa-solid fa-envelope icon"></i>
+          <h4 class="email pt-3">croissants_recipes@me.com</h4>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
