I added a background image in the contact page

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="contact-body">
     <nav class="navbar navbar-expand-sm background sticky-top">
       <div class="container">
         <a class="navbar-brand">
